Fixed spacing and some css

--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
   }
   
-.para,
-.small-para {
+.para, .small-para {
     color: hsl(0, 0%, 0%);
     font-weight: 800;
+    font-size: 14px;
 }
   
 .small-para {
@@ -25,22 +25,20 @@ body {
 } 
   
 .button .confirm {
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
     font-size: 20px;
     background: green;
     color: white;
     font-weight: bold;
-}
+  }
   
-.text .child {
+  div.child {
     color: rgb(0, 0, 0);
     font-weight: 800;
     font-size: 14px;
   }
   
-div.text {
+  div.text  {
     color: rgb(0, 0, 0);
     font-size: 22px;
     font-weight: 100;
-}
+  }
